fix contrast error on homepage
add th text for remove from cart column

restore banner contrast (#2865)

wip

restore banner contrast (#2865)

wip

--- a/src/packages/@ncigdc/uikit/Banner/styles.scss
+++ b/src/packages/@ncigdc/uikit/Banner/styles.scss
@@ -10,6 +10,7 @@
 
   &.sectionHeader {
     box-shadow: inset 0 1px #ccc, inset 0 3px #eee;
+    color: #3a3a3a;
     font-size: 1.5rem;
     text-align: center;
   }
@@ -38,6 +39,7 @@
 
   &.warning {
     background-color: #D39C3F;
+    color: #231806;
     font-weight: bold;
   }
 
